--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>前端简历|敖昕妍</title>
+        <title>portfolio|thea</title>
         <!--加载 fontawsome CSS库和自己设置的样式-->
         <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -26,7 +26,7 @@
         <section id="homepage">
           <div class="container">
             <a href="https://theaao.github.io"><img srcset="images/avatar_100px.jpg 100w, images/avatar_200px.jpg 200w" sizes="(min-width: 768px) 200px, 100px" src="images/avatar_100px.jpg" alt="头像" id="avatar"></a>
-            <h1>敖昕妍</h1>
+            <h1>Thea</h1>
             <h2>初级前端工程师</h2>
             <ul class="floatfix">
               <li class="float">
@@ -41,7 +41,7 @@
             <a href="#about-me"><span class="fa fa-2x fa-angle-down"></span></a>
           </div>
         </section>
-        <section id="about-me">          
+        <!--section id="about-me">          
           <h2>关于我</h2>
           <div class="card floatfix">
             <div class="left float">
@@ -61,7 +61,7 @@
           <div class="nextpage">
             <a href="#skills"><span class="fa fa-2x fa-angle-down"></span></a>
           </div>          
-        </section>
+        </section -->
         <section id="skills">
           <h2>技术栈</h2>
           <div>
